# fractal-pathtracer

./: CMakeLists.txt
shaders/: fullscreen.frag  fullscreen.vert  pathtracer.comp
src/: main.cpp
